--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main                       # Scan repo on pushes to main
   schedule:
-    - cron: "0 0 * * *"            # Daily scan at 00:00 GMT
+  #  - cron: "0 0 * * *"            # Daily scan at 00:00 GMT
   workflow_dispatch:               # Allow manual trigger
 
 permissions:
